# constats

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am
src/constats/: Makefile.am  constats.man  main.c  main.h  options.c  options.h  seqinfo.c  seqinfo.h  test_constats.bash
src/share/: Makefile.am  fareader.c  fareader.h  sequtils.c  sequtils.h  tokenset.c  varstr.c
