#NOTE NEXT IS ONLY FOR INSTALLED LIBRARIES
#lib_LIBRARIES = libshare.a

noinst_LIBRARIES = libshare.a
libshare_a_SOURCES = \
  fareader.c fareader.h \
  sequtils.c sequtils.h \
  tokenset.c tokenset.h \
  uthash.h \
  utils.c utils.h \
  varstr.c varstr.h

clean-generic:
	rm -f core core.* a.out *.BAK *.bak *~
